Add seeds db generator Add PUT method on events Clean code
